k8s/product/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: product
  labels:
    app.kubernetes.io/part-of: kgateway-playground
